--- a/kubernetes-manifest/backend/deployment.yaml
+++ b/kubernetes-manifest/backend/deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: ogochukwuozotta/backend:70a67e3a86e4e50f003513db652c7c90ddcb79e7
+          image: fruchedes/backend:70a67e3a86e4e50f003513db652c7c90ddcb79e7
           imagePullPolicy: IfNotPresent 
           env:
             - name: MONGO_CONN_STR
