--- a/kubernetes-manifest/database/secret.yaml
+++ b/kubernetes-manifest/database/secret.yaml
@@ -5,6 +5,6 @@ metadata:
   name: mongodb-secret
 type: Opaque
 data:
-  mongo-username: b2dvb3pvdHRh
-  mongo-password: QWRtaW4xMjM=
-  mongo-secret-key: QWRtaW4xMjM=
+  mongo-username: admin
+  mongo-password: admin
+  mongo-secret-key: admin
