--- a/kubernetes-manifest/frontend/deployment.yaml
+++ b/kubernetes-manifest/frontend/deployment.yaml
@@ -23,6 +23,6 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ogochukwuozotta/frontend:70a67e3a86e4e50f003513db652c7c90ddcb79e7
+        image: fruchedes/frontend:70a67e3a86e4e50f003513db652c7c90ddcb79e7
         ports:
         - containerPort: 80
